# test_url_sniff

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.env  docker-compose.dev.yml  help.txt  mypy.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 9d70f2145bb3_initial.py  a0075cc71d70_new_field.py
url_sniff/: __init__.py  const.py  main.py  parser.py  schemas.py  settings.py  worker_pool.py
url_sniff/db/: __init__.py  base.py  deps.py  models.py
url_sniff/templates/: task_info.html
