[tool.poetry]
name = "test_url_sniff"
version = "0.1.0"
description = ""
authors = ["il.kulyabin <kuligleo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.92.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.4"}
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.4"


[tool.poetry.group.test.dependencies]
mypy = "^1.0.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.4"}
types-beautifulsoup4 = "^4.11.6.6"
types-requests = "^2.28.11.13"
ruff = "^0.0.247"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
